# nam-to-rtneural

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  nam_to_aida.sh
python/: train.py
res/: 0.nam  LSTM-16.json
src/: convert.cpp
tasks/: build_nam_converter.sh  convert_to_aida.sh  install_python_packages.sh  prepare_aida_trainer.sh
